--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,29 +1,22 @@
 @charset "UTF-8";
-a{
-	color: white;
-	text-decoration: none;
-}
-a:hover{
-	color: orange;
+/* content */
+@import url("./content/table.css");
+@import url("./content/button.css");
+@import url("./content/footer.css");
+/* screen */
+@import url("./screen/mainHeader.css");
+
+html{
+	padding: 0;
+	margin: 0;
 }
 body {
 	background-color: teal;
 	color: white;
-}
-table {
-	border: 2px solid white;
-	padding: 1px;
-	cellpadding: 2px;
+	margin: 0;
+	padding: 0;
 }
 
-td,th{
-	border-bottom: 2px solid white;
-	padding: 5px 2px;
-	margin: 0;
-}
-th{
-	font-size: 30px;
-}
 .userComment-hidden{
 	display: none;
 }
