--- a/WebContent/css/content/button.css
+++ b/WebContent/css/content/button.css
@@ -31,3 +31,13 @@ a:hover{
 .btn-number:hover{
 	cursor: pointer;
 }
+.button{
+	border: 1px solid gray;
+	background-color: white;
+	border-radius: 7px;
+	color: teal;
+	font-weight: 600;
+}
+.button:hover {
+	opacity: 0.7;
+}
